force-app/main/default/objects/Order_Item__c/fields/Customer_Order__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order__c</fullName>
    <label>Customer Order</label>
    <referenceTo>Customer_Order__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>