force-app/main/default/objects/Order_Item__c/fields/Dish__c.field-meta.xml
<CustomField>
    <fullName>Dish__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dish</label>
    <referenceTo>Dish__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>