force-app/main/default/objects/Order_Item__c/fields/Total_Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Item_Cost__c</fullName>
    <label>Total Item Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>